垃圾回收 最终判定